fix: scrollbar style and scroll behavior

--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,12 @@
 @tailwind components;
 @tailwind utilities;
 
+* {
+  scrollbar-width: thin;
+  scrollbar-color: #888 #f1f1f1;
+  scroll-behavior: smooth;
+}
+
 @layer {
   .LayoutContainer {
     @apply max-w-7xl desktop:mx-auto mx-4;
